tests/ui/anyarray.stderr
error: AnyArray expects a generic parameter, for example, AnyArray<usize> or AnyArray<AnyString>.
 --> tests/ui/anyarray.rs:4:23
  |
4 | fn empty_array(array: AnyArray) {
  |                       ^^^^^^^^
